--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ django-cors-headers==4.3.1
 djangorestframework==3.14.0
 isort==5.13.2
 mccabe==0.7.0
+pillow==10.2.0
 platformdirs==4.2.0
 psycopg2-binary==2.9.9
 pylint==3.1.0
