fix: move all neccessrry files for CI and docker to right place

--- a/backend/backend/.env
+++ b/backend/backend/.env
@@ -1,7 +1,7 @@
-SECRET_KEY=
-DEBUG=
-NAME=
-USER=
-PASSWORD=
-HOST=
-PORT=
+SECRET_KEY=some
+DEBUG=True
+NAME=postgres
+USER=postgres
+PASSWORD=django
+HOST=localhost
+PORT=5432
