--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -16,6 +16,6 @@ jobs:
         with:
           python-version: "3.10"
       - name: install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r backend/requirements.txt
       - name: Run tests
-        run: python3 backend/manage.py test
+        run: python3 backend/manage.py test backend
