chore: add new dependencies, update .env file

--- a/backend/backend/.env
+++ b/backend/backend/.env
@@ -3,5 +3,7 @@ DEBUG=True
 NAME=postgres
 USER=postgres
 PASSWORD=django
-HOST=localhost
+HOST=my-postgres
 PORT=5432
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
