--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   web:
-    build: ..
+    build: .
     command: ["sh", "entrypoint.sh"]
     env_file:
       - backend/.env
