--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -7,15 +7,15 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-
     steps:
+      - uses: ikalnytskyi/action-setup-postgres@v6
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: setup Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - name: install dependencies
+      - name: Install dependencies
         run: pip install -r backend/requirements.txt
       - name: Run tests
         run: python3 backend/manage.py test backend
