chore: add neccesary jwt configuration

--- a/backend/backend/.env
+++ b/backend/backend/.env
@@ -1,9 +1,9 @@
 SECRET_KEY=some
 DEBUG=True
-NAME=postgres
-USER=postgres
+NAME=charity_auctions2
+USER=andrew
 PASSWORD=django
-HOST=my-postgres
+HOST=localhost
 PORT=5432
-EMAIL_HOST_USER=
-EMAIL_HOST_PASSWORD=
+EMAIL_HOST_USER=rega600b@gmail.com
+EMAIL_HOST_PASSWORD=ygkj mrvr eyol qmpl
