--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,4 +19,5 @@ typing_extensions==4.10.0
 coverage==7.4.4
 django-debug-toolbar==4.3.0
 django-rest-passwordreset==1.4.1
+djangorestframework-simplejwt==5.2.2
 
