--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ coverage==7.4.4
 dill==0.3.8
 daphne==4.1.2
 Django==5.0.3
+gunicorn==22.0.0
 django-cors-headers==4.3.1
 django-debug-toolbar==4.3.0
 django-rest-passwordreset==1.4.1
@@ -27,4 +28,5 @@ sqlparse==0.4.4
 tomli==2.0.1
 tomlkit==0.12.4
 typing_extensions==4.10.0
+
 
