--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,21 +1,56 @@
 name: Automated tests
 
 on:
-  push
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
 
+  test:
+    runs-on: ubuntu-20.04
+
+    container: python:3.10
+
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+
+      redis:
+        image: redis
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 6379:6379
 
     steps:
-      - name: Checkout repository
+      - name: Check out repository code
         uses: actions/checkout@v3
-      - name: setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-      - name: install dependencies
-        run: pip install -r backend/requirements.txt
-      - name: Run tests
-        run: python3 backend/manage.py test backend
+
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run Tests
+        run: |
+          python3 backend/manage.py test backend
+        env:
+          DATABASE_NAME: postgres
+          DATABASE_USER: postgres
+          DATABASE_PASS: postgres
+          DATABASE_HOST: postgres
+          DATABASE_PORT: 5432
+          REDIS_HOST: redis-server
+          REDIS_PORT: 6379
