--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -2,7 +2,9 @@ name: Automated tests
 
 on:
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
+  push:
+    branches: [ "master" ]
 
 jobs:
 
