--- a/backend/backend/.env
+++ b/backend/backend/.env
@@ -3,7 +3,7 @@ DEBUG=True
 NAME=postgres
 USER=postgres
 PASSWORD=django
-HOST=my-postgres
+HOST=postgres
 PORT=5432
 EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
