--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -43,16 +43,16 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r backend/requirements.txt
 
       - name: Run Tests
         run: |
           python3 backend/manage.py test backend
         env:
-          DATABASE_NAME: postgres
-          DATABASE_USER: postgres
-          DATABASE_PASS: postgres
-          DATABASE_HOST: postgres
-          DATABASE_PORT: 5432
+          NAME: postgres
+          USER: postgres
+          PASSWORD: post
+          HOST: postgres
+          PORT: 5432
           REDIS_HOST: redis-server
           REDIS_PORT: 6379
