--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -12,7 +12,7 @@ jobs:
     container: python:3.10
 
     services:
-      my-postgres:
+      postgres:
         image: postgres
         env:
           POSTGRES_PASSWORD: postgres
@@ -24,7 +24,7 @@ jobs:
         ports:
           - 5432:5432
 
-      redis-server:
+      redis:
         image: redis
         options: >-
           --health-cmd "redis-cli ping"
@@ -49,8 +49,8 @@ jobs:
         env:
           DATABASE_NAME: postgres
           DATABASE_USER: postgres
-          DATABASE_PASS: postgres
-          DATABASE_HOST: my-postgres
+          DATABASE_PASS: django
+          DATABASE_HOST: postgres
           DATABASE_PORT: 5432
-          REDIS_HOST: redis-server
+          REDIS_HOST: redis
           REDIS_PORT: 6379
