--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -49,7 +49,7 @@ jobs:
         env:
           DATABASE_NAME: postgres
           DATABASE_USER: postgres
-          DATABASE_PASS: postgres
+          DATABASE_PASS: django
           DATABASE_HOST: postgres
           DATABASE_PORT: 5432
           REDIS_HOST: redis
