fix: add changes to CI

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -9,8 +9,6 @@ jobs:
   test:
     runs-on: ubuntu-20.04
 
-    container: python:3.10
-
     services:
       postgres:
         image: postgres
@@ -23,8 +21,10 @@ jobs:
           --health-retries 5
         ports:
           - 5432:5432
+        depends_on:
+          redis
 
-      redis-server:
+      redis:
         image: redis:7.2.5-alpine3.20
         options: >-
           --health-cmd "redis-cli ping"
@@ -33,8 +33,6 @@ jobs:
           --health-retries 5
         ports:
           - 6379:6379
-
-
 
     steps:
       - name: Check out repository code
@@ -52,7 +50,7 @@ jobs:
           DATABASE_NAME: postgres
           DATABASE_USER: postgres
           DATABASE_PASS: django
-          DATABASE_HOST: localhost
+          DATABASE_HOST: postgres
           DATABASE_PORT: 5432
-          REDIS_HOST: localhost
+          REDIS_HOST: redis
           REDIS_PORT: 6379
