--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -52,4 +52,4 @@ jobs:
           DATABASE_HOST: postgres
           DATABASE_PORT: 5432
           REDIS_HOST: redis
-          REDIS_PORT: 6379
+          REDIS_LOCATION: redis://redis:6379
