--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -52,5 +52,5 @@ jobs:
           DATABASE_PASS: postgres
           DATABASE_HOST: postgres
           DATABASE_PORT: 5432
-          REDIS_HOST: redis-server
+          REDIS_HOST: redis
           REDIS_PORT: 6379
