--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -15,7 +15,7 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_PASSWORD: django
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -41,7 +41,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r backend/requirements.txt
 
       - name: Run Tests
         run: |
@@ -49,7 +49,7 @@ jobs:
         env:
           DATABASE_NAME: postgres
           DATABASE_USER: postgres
-          DATABASE_PASS: postgres
+          DATABASE_PASS: django
           DATABASE_HOST: postgres
           DATABASE_PORT: 5432
           REDIS_HOST: redis
