--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -15,7 +15,7 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_PASSWORD: django
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -25,14 +25,13 @@ jobs:
           - 5432:5432
 
       redis:
-        image: redis
+        image: redis:7.2.5-alpine3.20
         options: >-
           --health-cmd "redis-cli ping"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-        ports:
-          - 6379:6379
+  
 
     steps:
       - name: Check out repository code
@@ -41,7 +40,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r backend/requirements.txt
 
       - name: Run Tests
         run: |
@@ -49,8 +48,8 @@ jobs:
         env:
           DATABASE_NAME: postgres
           DATABASE_USER: postgres
-          DATABASE_PASS: postgres
+          DATABASE_PASS: django
           DATABASE_HOST: postgres
           DATABASE_PORT: 5432
-          REDIS_HOST: redis-server
-          REDIS_PORT: 6379
+          REDIS_HOST: redis
+          REDIS_LOCATION: redis://redis:6379
