--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,12 +9,12 @@ server {
 		proxy_pass http://backend;
 	}
 
-	location /static/rest_framework/ {
-		root /static/;
-	}
-
 	location / {
 		root /var/www/frontend;
-		try_files $uri $uri/ /index.html;
+		try_files $uri /index.html =404;
+	}
+
+	location /static/rest_framework/ {
+		alias /static/;
 	}
 }
